@@ -1,13 +1,12 @@
 package se.citerus.dddsample.domain.model.voyage;
 
-import static se.citerus.dddsample.application.util.DateTestUtil.toDate;
-
 import se.citerus.dddsample.domain.model.location.Location;
-
-import static se.citerus.dddsample.domain.model.location.SampleLocations.*;
 
 import java.lang.reflect.Field;
 import java.util.*;
+
+import static se.citerus.dddsample.application.util.DateTestUtil.toDate;
+import static se.citerus.dddsample.domain.model.location.SampleLocations.*;
 
 /**
  * Sample carrier movements, for test purposes.
@@ -22,7 +21,7 @@ public class SampleVoyages {
     public static final Voyage CM006 = createVoyage("CM006", HAMBURG, HANGZHOU);
 
     private static Voyage createVoyage(String id, Location from, Location to) {
-        return new Voyage(new VoyageNumber(id), new Schedule(Collections.singletonList(
+        return new Voyage(new VoyageNumber(id), new Schedule(List.of(
                 new CarrierMovement(from, to, new Date(), new Date())
         )));
     }
